# healthcare_test

./: .gitignore  .pre-commit-config.yaml  Readme.md
healthcare_analytics/: .env.example  Dockerfile  Makefile  Readme.md  entrypoint.sh  main.py  pyproject.toml
healthcare_analytics/api/: router.py  utils.py
healthcare_analytics/api/endpoints/: caregivers.py
healthcare_analytics/components/core/: config.py  database.py  repository.py
healthcare_analytics/components/duty/: enums.py  models.py
healthcare_analytics/components/user/: enums.py  models.py  repository.py
healthcare_analytics/components/visit/: enums.py  models.py  repository.py  schemas.py
healthcare_app/: .env.example  Makefile  Readme.md  celery_app.py  gunicorn.conf.py  manage.py  pyproject.toml
healthcare_app/docker/: Dockerfile.api  Dockerfile.celery_beat  Dockerfile.celery_worker
healthcare_app/duty/: admin.py  enums.py  models.py  router.py  serializers.py  views.py
healthcare_app/duty/migrations/: 0001_initial.py  0002_initial.py  0003_default_duty.py
healthcare_app/healthcare/: constants.py  lookups.py  models.py  settings.py  urls.py
healthcare_app/scripts/: api_entrypoint.sh  celery_beat_entrypoint.sh  celery_worker_entrypoint.sh
healthcare_app/user/: admin.py  emums.py  models.py  permissions.py  router.py  serializers.py  views.py
healthcare_app/user/migrations/: 0001_initial.py  0002_default_user.py
healthcare_app/visit/: admin.py  constants.py  enums.py  filters.py  models.py  router.py  serializers.py  tasks.py  views.py
healthcare_app/visit/migrations/: 0001_initial.py
infrastructure/docker/: Dockerfile.base  docker-compose.local.yaml  docker-compose.yml
infrastructure/nginx/: nginx.conf
